--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -184,7 +184,7 @@ jobs:
     name: Run go lint
     needs: setup
     runs-on: [self-hosted, linux, main, go]
-    if: ${{ inputs.language == 'golang' }}
+    if: ${{ inputs.code_lang == 'golang' }}
     container:
       image: public.ecr.aws/c2u4x1k5/go-runner:1.17.2
     strategy:
@@ -237,9 +237,9 @@ jobs:
 
   go-unittest:
     name: Run go unit test
-    if: ${{ inputs.language == 'golang' }}
     needs: setup
     runs-on: [self-hosted, linux, main, go]
+    if: ${{ inputs.code_lang == 'golang' }}
     container:
       image: public.ecr.aws/c2u4x1k5/go-runner:1.17.2
     steps:
