--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -192,7 +192,7 @@ jobs:
         linter: [gosec, gocyclo]
     steps:
       - name: Checkout
-        uses: kkp-dfs/dime-github-actions-workflows/checkout@main
+        uses: kkp-dfs/dime-github-actions-workflows/checkout@fargate
         with:
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
@@ -244,7 +244,7 @@ jobs:
       image: public.ecr.aws/c2u4x1k5/go-runner:1.17.2
     steps:
       - name: Checkout
-        uses: kkp-dfs/dime-github-actions-workflows/checkout@main
+        uses: kkp-dfs/dime-github-actions-workflows/checkout@fargate
         with:
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
@@ -311,7 +311,7 @@ jobs:
       image_tag: ${{ steps.build.outputs.image_tag }}
     steps:
       - name: Checkout
-        uses: kkp-dfs/dime-github-actions-workflows/checkout@main
+        uses: kkp-dfs/dime-github-actions-workflows/checkout@fargate
         with:
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
