--- a/checkout/action.yml
+++ b/checkout/action.yml
@@ -18,12 +18,17 @@ inputs:
 runs:
   using: composite
   steps:
+    # - name: Checkout repository
+    #   uses: actions/checkout@v2
+    #   with:
+    #     repository: ${{ inputs.repository }}
+    #     ref: ${{ inputs.base_ref }}
+    #     clean: true
     - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        repository: ${{ inputs.repository }}
-        ref: ${{ inputs.base_ref }}
-        clean: true
+      shell: bash
+      run: |
+        git clone ${{ inputs.repository }} .
+        git checkout ${{ inputs.base_ref }}
 
     - shell: bash
       if: ${{ inputs.base_ref != inputs.target_ref }}
