--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -117,16 +117,16 @@ jobs:
       endpoint: ${{ steps.paramater.outputs.host }}
       ref: ${{ steps.paramater.outputs.ref }}
     steps:
-      # - name: Setup ${{ inputs.code_lang }}
-      #   uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
-      #   with:
-      #     repository: ${{ inputs.repository }}
-      #     base_ref: ${{ inputs.base_ref }}
-      #     target_ref: ${{ inputs.target_ref }}
-      #     language: ${{ inputs.code_lang }}
-      #     go_version: ${{ inputs.go-version }}
-      #     node_version: ${{ inputs.node-version }}
-      #     gh_access_token: ${{ secrets.gh_access_token }}
+      - name: Setup ${{ inputs.code_lang }}
+        uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
+        with:
+          repository: ${{ inputs.repository }}
+          base_ref: ${{ inputs.base_ref }}
+          target_ref: ${{ inputs.target_ref }}
+          language: ${{ inputs.code_lang }}
+          go_version: ${{ inputs.go-version }}
+          node_version: ${{ inputs.node-version }}
+          gh_access_token: ${{ secrets.gh_access_token }}
       # - name: Get ECR information
       #   id: ecr
       #   uses: kkp-dfs/dime-github-actions-workflows/get-ecr-info@main
@@ -145,6 +145,7 @@ jobs:
           fi
           echo "::set-output name=ref::$REF_NAME"
           echo "::set-output name=host::$HOST"
+          which ginkgo
 
   # lint:
   #   name: Run lint
@@ -198,11 +199,17 @@ jobs:
           base_ref: ${{ inputs.base_ref }}
           target_ref: ${{ inputs.target_ref }}
       - run: echo "/usr/local/go/bin" >> $GITHUB_PATH
-      - run: make tidy
-      - run: make tools-install
+      - name: Cache go module and tools
+        uses: actions/cache@v2
+        with:
+          path: |
+            $HOME/go/pkg/mod
+            $HOME/go/bin
+            ./vendor
+          key: ${{ runner.os }}-${{ inputs.code_lang }}-${{ inputs.repository }}-${{ hashFiles('**/go.sum') }}
       - uses: golangci/golangci-lint-action@v2
         with:
-          args: -E ${{ matrix.linter }} --timeout 2m0s
+          args: -E ${{ matrix.linter }} --timeout 4m0s
           version: latest
           skip-pkg-cache: true
 
@@ -253,8 +260,14 @@ jobs:
           base_ref: ${{ inputs.base_ref }}
           target_ref: ${{ inputs.target_ref }}
       - run: echo "/usr/local/go/bin" >> $GITHUB_PATH
-      - run: make tidy
-      - run: make tools-install
+      - name: Cache go module and tools
+        uses: actions/cache@v2
+        with:
+          path: |
+            $HOME/go/pkg/mod
+            $HOME/go/bin
+            ./vendor
+          key: ${{ runner.os }}-${{ inputs.code_lang }}-${{ inputs.repository }}-${{ hashFiles('**/go.sum') }}
       - run: touch $HOME/.ack-ginkgo-rc
       - run: make unit-test
       - run: make generate-unitcoverage
