--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -115,17 +115,17 @@ runs:
         touch $HOME/.ack-ginkgo-rc
         make integration-test
 
-    - name: Run node unit test
-      if: ${{ inputs.language == 'node' }}
-      uses: docker://mcr.microsoft.com/playwright:focal
-      with:
-        args: >-
-          yarn test:e2e --reporter list
-          --output /tmp/test-reports
-          --project Galaxy-S5
-          --project iphone-se
-          --project iphone-12-pro-max
-          --project ipad-mini
+    # - name: Run node unit test
+    #   if: ${{ inputs.language == 'node' }}
+    #   uses: docker://mcr.microsoft.com/playwright:focal
+    #   with:
+    #     args: >-
+    #       yarn test:e2e --reporter list
+    #       --output /tmp/test-reports
+    #       --project Galaxy-S5
+    #       --project iphone-se
+    #       --project iphone-12-pro-max
+    #       --project ipad-mini
 
     - name: Run flutter integration test
       if: ${{ inputs.language == 'flutter' }}
@@ -148,17 +148,17 @@ runs:
         echo "::set-output name=title::'${{ inputs.application_name }} integration test is FAIL'"
         echo "::set-output name=message::'Found some failed test cases'"
 
-    - name: Slack Notification
-      if: ${{ always() }}
-      uses: rtCamp/action-slack-notify@v2
-      env:
-        SLACK_CHANNEL: ${{ inputs.slack_channel }}
-        SLACK_WEBHOOK: ${{ inputs.slack_webhook }}
-        SLACK_USERNAME: GitHub Actions
-        SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
-        SLACK_COLOR: ${{ steps.fail_message.outputs.color || steps.success_message.outputs.color }}
-        SLACK_TITLE: ${{ steps.fail_message.outputs.title || steps.success_message.outputs.title }}
-        SLACK_MESSAGE: ${{ steps.fail_message.outputs.message || steps.success_message.outputs.message }}
+    # - name: Slack Notification
+    #   if: ${{ always() }}
+    #   uses: rtCamp/action-slack-notify@v2
+    #   env:
+    #     SLACK_CHANNEL: ${{ inputs.slack_channel }}
+    #     SLACK_WEBHOOK: ${{ inputs.slack_webhook }}
+    #     SLACK_USERNAME: GitHub Actions
+    #     SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
+    #     SLACK_COLOR: ${{ steps.fail_message.outputs.color || steps.success_message.outputs.color }}
+    #     SLACK_TITLE: ${{ steps.fail_message.outputs.title || steps.success_message.outputs.title }}
+    #     SLACK_MESSAGE: ${{ steps.fail_message.outputs.message || steps.success_message.outputs.message }}
 
     - name: Tear down integration test environment
       if: ${{ always() }}
