--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -108,7 +108,7 @@ on:
 jobs:
   setup:
     name: Install dependencies and keep caches
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, main, deployment]
     outputs:
       ecr_token: ${{ steps.ecr.outputs.token }}
       ecr_repository: ${{ steps.ecr.outputs.repository }}
@@ -258,6 +258,10 @@ jobs:
       - run: touch $HOME/.ack-ginkgo-rc
       - run: make unit-test
       - run: make generate-unitcoverage
+      - run: |
+          REPORT=$(lcov --summary unitcoverage.lcov)
+          COVERAGE=$(echo $REPORT | sed -e 's/.* \([0-9]\{1,2\}\.[0-9]\{1,2\}\)% .*/\1/')
+          echo $COVERAGE
 
   integration-test:
     name: Run integration test
