--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -261,7 +261,10 @@ jobs:
       - run: |
           REPORT=$(lcov --summary unitcoverage.lcov)
           COVERAGE=$(echo $REPORT | sed -e 's/.* \([0-9]\{1,2\}\.[0-9]\{1,2\}\)% .*/\1/')
-          echo $COVERAGE
+          if [ $(echo "${COVERAGE} < 80" | bc) -ne 0 ]; then
+            echo "Coverage less than 80%"
+            exit 1
+          fi
 
   integration-test:
     name: Run integration test
